...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity">

    <EditText
        android:id="@+id/editTextShoppingListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:hint="Enter Name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="41dp" />
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/editTextShoppingListName"
        app:layout_constraintTop_toBottomOf="@+id/editTextShoppingListName"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/buttonCreateList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_list_image"
        app:layout_constraintHorizontal_bias="0.529"
...
